combine OpenAIJsonConfig into OpenAIConfig, update examples

--- a/example/model/self_instruct_custom_html_source.ipynb
+++ b/example/model/self_instruct_custom_html_source.ipynb
@@ -74,7 +74,8 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.client import Client\n",
-    "from uniflow.config import OpenAIJsonConfig\n",
+    "from uniflow.config import OpenAIConfig\n",
+    "from uniflow.model.config import OpenAIModelConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from uniflow.schema import Context, GuidedPrompt\n",
     "\n",
@@ -196,7 +197,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIJsonConfig(guided_prompt_template=guided_prompt)\n",
+    "config = OpenAIConfig(\n",
+    "    guided_prompt_template=guided_prompt,\n",
+    "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
+    ")\n",
     "client = Client(config)"
    ]
   },
@@ -209,7 +213,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:05<00:00,  1.92s/it]\n"
+      "100%|██████████| 3/3 [00:08<00:00,  2.73s/it]\n"
      ]
     }
    ],
@@ -226,20 +230,20 @@
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.',\n",
-       "      'question': 'What will we learn to compute in the next sections?',\n",
-       "      'answer': 'The amount of information that different events have.'}],\n",
+       "      'question': 'What is the amount of information associated with the events listed?',\n",
+       "      'answer': 'Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x176ad4af0>},\n",
-       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot of information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'What does information represent according to the natural idea presented in the thought experiments?',\n",
-       "      'answer': 'Information represents the degree of surprise or the abstract possibility of the event.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x168ba8040>},\n",
+       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
+       "      'question': 'What does information represent according to the natural idea discussed in the thought experiments?',\n",
+       "      'answer': 'The degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x176ad4ac0>},\n",
+       "  'root': <uniflow.node.node.Node at 0x154e2dc90>},\n",
        " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'What did Shannon introduce for the first time in his 1948 article?',\n",
+       "      'question': 'What concept did Shannon introduce for the first time?',\n",
        "      'answer': 'Shannon introduced the concept of information entropy for the first time.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x176ad4d00>}]"
+       "  'root': <uniflow.node.node.Node at 0x168ba8370>}]"
       ]
      },
      "execution_count": 10,
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -293,19 +297,19 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
-       "      <td>What will we learn to compute in the next sections?</td>\n",
-       "      <td>The amount of information that different events have.</td>\n",
+       "      <td>What is the amount of information associated with the events listed?</td>\n",
+       "      <td>Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot of information. For a common event, we may\\nnot need much information.</td>\n",
-       "      <td>What does information represent according to the natural idea presented in the thought experiments?</td>\n",
-       "      <td>Information represents the degree of surprise or the abstract possibility of the event.</td>\n",
+       "      <td>If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.</td>\n",
+       "      <td>What does information represent according to the natural idea discussed in the thought experiments?</td>\n",
+       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.</td>\n",
-       "      <td>What did Shannon introduce for the first time in his 1948 article?</td>\n",
+       "      <td>What concept did Shannon introduce for the first time?</td>\n",
        "      <td>Shannon introduced the concept of information entropy for the first time.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,13 +317,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                                                                                                                                                   context                                                                                             question                                                                                   answer\n",
-       "0                                                                                                                        Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.                                                  What will we learn to compute in the next sections?                                    The amount of information that different events have.\n",
-       "1  If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot of information. For a common event, we may\\nnot need much information.  What does information represent according to the natural idea presented in the thought experiments?  Information represents the degree of surprise or the abstract possibility of the event.\n",
-       "2                                                                                                                                         In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.                                   What did Shannon introduce for the first time in his 1948 article?                Shannon introduced the concept of information entropy for the first time."
+       "                                                                                                                                                                                                                                                                                                                                                                                                context                                                                                             question                                                                     answer\n",
+       "0                                                                                                                     Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.                                 What is the amount of information associated with the events listed?      Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.\n",
+       "1  If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.  What does information represent according to the natural idea discussed in the thought experiments?           The degree of surprise or the abstract possibility of the event.\n",
+       "2                                                                                                                                      In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.                                               What concept did Shannon introduce for the first time?  Shannon introduced the concept of information entropy for the first time."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
