--- a/example/model/self_instruct_html_source.ipynb
+++ b/example/model/self_instruct_html_source.ipynb
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:04<00:00,  1.52s/it]\n"
+      "100%|██████████| 3/3 [00:03<00:00,  1.07s/it]\n"
      ]
     }
    ],
@@ -218,15 +218,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information does the first event have?\\nanswer: 0 bits.'],\n",
+       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1691a4430>},\n",
-       " {'output': [{'response': ['question: How much information do we need to describe an unusual event?\\nanswer: A lot of information.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x172c4bc70>},\n",
+       " {'output': [{'response': ['Question: How does the amount of information needed depend on the event?\\nAnswer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1691a4400>},\n",
-       " {'output': [{'response': ['question: What did Claude E. Shannon introduce in his article in 1948?\\nanswer: The concept of information entropy for the first time.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x172c4b8b0>},\n",
+       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1691a5b40>}]"
+       "  'root': <uniflow.node.node.Node at 0x172c4be50>}]"
       ]
      },
      "execution_count": 10,
@@ -278,28 +278,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>How much information does the first event have?</td>\n",
-       "      <td>0 bits.</td>\n",
+       "      <td>How much information do the events have in terms of bits?</td>\n",
+       "      <td>The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How much information do we need to describe an unusual event?</td>\n",
-       "      <td>A lot of information.</td>\n",
+       "      <td>Question: How does the amount of information needed depend on the event?</td>\n",
+       "      <td>Answer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>What did Claude E. Shannon introduce in his article in 1948?</td>\n",
-       "      <td>The concept of information entropy for the first time.</td>\n",
+       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
+       "      <td>Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                         question                                                   answer\n",
-       "0                 How much information does the first event have?                                                  0 bits.\n",
-       "1   How much information do we need to describe an unusual event?                                    A lot of information.\n",
-       "2    What did Claude E. Shannon introduce in his article in 1948?   The concept of information entropy for the first time."
+       "                                                                   question                                                                                                                                                                           answer\n",
+       "0                 How much information do the events have in terms of bits?                                      The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.\n",
+       "1  Question: How does the amount of information needed depend on the event?  Answer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.\n",
+       "2             Who published A Mathematical Theory of Communication in 1948?                                                                                                                                                               Claude E. Shannon."
       ]
      },
      "execution_count": 11,
