--- a/example/model/self_instruct_pdf_source.ipynb
+++ b/example/model/self_instruct_pdf_source.ipynb
@@ -76,7 +76,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.client import Client\n",
-    "from uniflow.config import OpenAIJsonConfig\n",
+    "from uniflow.config import OpenAIConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.schema import Context, GuidedPrompt\n",
@@ -178,7 +178,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIJsonConfig()\n",
+    "config = OpenAIConfig(\n",
+    "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
+    ")\n",
     "client = Client(config)"
    ]
   },
@@ -191,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:02<00:00,  2.01s/it]\n"
+      "100%|██████████| 1/1 [00:04<00:00,  4.56s/it]\n"
      ]
     }
    ],
@@ -207,11 +209,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': \"11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...\",\n",
-       "      'question': \"What is the difference between the manager's schedule and the maker's schedule?\",\n",
-       "      'answer': \"The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming.\"}],\n",
+       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole day.\"\\nCharles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much is that they\\'reon a different type of schedule from other people. Meetings costthem more.\\nThere are two types of schedule, which I\\'ll call the manager\\'sschedule and the maker\\'s schedule. The manager\\'s schedule is forbosses. It\\'s embodied in the traditional appointment book, witheach day cut into one hour intervals. You can block off severalhours for a single task if you need to, but by default you changewhat you\\'re doing every hour.\\nWhen you use time that way, it\\'s merely a practical problem to meet with someone. Find an open slot in your schedule, bookthem, and you\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s theschedule of command. But there\\'s another way of using timethat\\'s common among people who make things, like programmersand writers. They generally prefer to use time in units of half aday at least. You can\\'t write or program well in units of an hour. Barely enough time to get started.',\n",
+       "      'question': 'What are the two types of schedules described?',\n",
+       "      'answer': \"The two types of schedules described are the manager's schedule and the maker's schedule.\"}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x154ca2710>}]"
+       "  'root': <uniflow.node.node.Node at 0x138191810>}]"
       ]
      },
      "execution_count": 10,
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -257,20 +259,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...</td>\n",
-       "      <td>What is the difference between the manager's schedule and the maker's schedule?</td>\n",
-       "      <td>The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming.</td>\n",
+       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole day.\"\\nCharles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much is that they'reon a different type of schedule from other people. Meetings costthem more.\\nThere are two types of schedule, which I'll call the manager'sschedule and the maker's schedule. The manager's schedule is forbosses. It's embodied in the traditional appointment book, witheach day cut into one hour intervals. You can block off severalhours for a single task if you need to, but by default you changewhat you're doing every hour.\\nWhen you use time that way, it's merely a practical problem to meet with someone. Find an open slot in your schedule, bookthem, and you're done.\\nMost powerful people are on the manager's schedule. It's theschedule of command. But there's another way of using timethat's common among people who make things, like programmersand writers. They generally prefer to use time in units of half aday at least. You can't write or program well in units of an hour. Barely enough time to get started.</td>\n",
+       "      <td>What are the two types of schedules described?</td>\n",
+       "      <td>The two types of schedules described are the manager's schedule and the maker's schedule.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     context                                                                         question                                                                                                                                                                                  answer\n",
-       "0  11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...  What is the difference between the manager's schedule and the maker's schedule?  The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming."
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      context  \\\n",
+       "0  11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole day.\"\\nCharles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much is that they'reon a different type of schedule from other people. Meetings costthem more.\\nThere are two types of schedule, which I'll call the manager'sschedule and the maker's schedule. The manager's schedule is forbosses. It's embodied in the traditional appointment book, witheach day cut into one hour intervals. You can block off severalhours for a single task if you need to, but by default you changewhat you're doing every hour.\\nWhen you use time that way, it's merely a practical problem to meet with someone. Find an open slot in your schedule, bookthem, and you're done.\\nMost powerful people are on the manager's schedule. It's theschedule of command. But there's another way of using timethat's common among people who make things, like programmersand writers. They generally prefer to use time in units of half aday at least. You can't write or program well in units of an hour. Barely enough time to get started.   \n",
+       "\n",
+       "                                         question                                                                                     answer  \n",
+       "0  What are the two types of schedules described?  The two types of schedules described are the manager's schedule and the maker's schedule.  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
