update README and polisht notebooks

--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -35,6 +35,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Install libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{sys.executable} -m pip install transformers accelerate bitsandbytes scipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import dependency"
    ]
   },
@@ -42,26 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
@@ -124,15 +121,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample size of raw context:  400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_context_input = [\n",
     "    \"\"\"We believe our success depends upon our capabilities in areas such as design, research and development, \\\n",
@@ -170,40 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample size of processed raw context with prompts:  400\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
-       "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
-       "    'question': 'What is the color of the dog?',\n",
-       "    'answer': 'black.'},\n",
-       "   {'context': 'We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party \\\\ \\ninfringement and misappropriation.'}]},\n",
-       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
-       "   {'context': 'The quick brown fox jumps over the lazy black dog.',\n",
-       "    'question': 'What is the color of the dog?',\n",
-       "    'answer': 'black.'},\n",
-       "   {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.'}]}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "input_data = [\n",
@@ -222,9 +178,9 @@
    "source": [
     "### Use LLM to generate data\n",
     "\n",
-    "In this example, we will use the [HuggingfaceModelServer](https://github.com/CambioML/uniflow/blob/main/uniflow/model/server.py#L170)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
+    "In this example, we will use the [HuggingfaceModelConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L39)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
     "\n",
-    "Here, we pass in our `guided_prompt` to the HuggingfaceConfig to use our customized instructions and examples, instead of the `uniflow` default ones.\n",
+    "Here, we pass in our `guided_prompt` to the `HuggingfaceConfig` to use our customized instructions and examples, instead of the `uniflow` default ones.\n",
     "\n",
     "Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.)"
    ]
@@ -233,19 +189,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/transformers/utils/generic.py:309: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.67s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = HuggingfaceConfig(\n",
     "    guided_prompt_template=guided_prompt,\n",
@@ -257,31 +201,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above.\n"
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow_no_installed/lib/python3.10/site-packages/bitsandbytes/nn/modules.py:228: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.\n",
-      "  warnings.warn(f'Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.')\n",
-      "100%|██████████| 4/4 [03:01<00:00, 45.29s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = client.run(input_data)"
    ]
@@ -292,40 +219,14 @@
    "source": [
     "### Process the output\n",
     "\n",
-    "Let's take a look of the generation output. We need to do a little postprocessing on the raw output."
+    "Let's take a look of the generated output. We need to do a little postprocessing on the raw output."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'context': ' We believe our success depends upon our capabilities in areas '\n",
-      "            'such as design, research and development, production and '\n",
-      "            'marketing and is supported and protected by our intellectual '\n",
-      "            'property rights, such as trademarks, utility and design patents, '\n",
-      "            'copyrights, and trade secrets, among others. We have followed a '\n",
-      "            'policy of applying for and registering intellectual property '\n",
-      "            'rights in the United States and select foreign countries on '\n",
-      "            'trademarks, inventions, innovations and designs that we deem '\n",
-      "            'valuable. W e also continue to vigorously protect our '\n",
-      "            'intellectual property, including trademarks, patents and trade '\n",
-      "            'secrets against third-party \\\\ \\n'\n",
-      "            'infringement and misappropriation.\\n',\n",
-      " 'question': ' How does the company protect their intellectual property?\\n',\n",
-      " 'answer': ' The company protects their intellectual property through various '\n",
-      "           'means such as trademarks, patents, copyrights, and trade secrets. '\n",
-      "           'They apply for and register these intellectual properties in the '\n",
-      "           'US and select foreign countries where they consider them valuable. '\n",
-      "           'Additionally, they actively monitor and enforce their intellectual '\n",
-      "           'property rights against infringement and misappropriation.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from pprint import pprint\n",
