--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -5,7 +5,16 @@
    "metadata": {},
    "source": [
     "# Notebook for ModelFlow \n",
-    "## Update system path"
+    "\n",
+    "In this example, we will show you how to generate question-answers (QAs) from give text strings using OpenAI's models via uniflow's [ModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L11).\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [OpenAI API key](https://platform.openai.com/api-keys) to run the code. Once you have the key, set it as the environment variable `OPENAI_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)\n",
+    "\n",
+    "### Update system path"
    ]
   },
   {
@@ -70,6 +79,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display the different flows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -97,23 +113,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run model flow to generate data"
+    "### Prepare Sample Prompts\n",
+    "Here, we will use the following sample prompts from which to generate QAs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "contexts = [\n",
+    "raw_context_input = [\n",
     "    \"It was a sunny day and the sky color is blue.\",\n",
     "    \"My name is Bobby and I am a talent software engineer working on AI/ML\",\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, for the given raw text strings `raw_context_input` above, we convert them to the `Context` class to be processed by `uniflow`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "data = [\n",
     "    Context(context=c)\n",
-    "    for c in contexts\n",
+    "    for c in raw_context_input\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use LLM to generate data\n",
+    "In this example, we use the base `Config` defaults with the [OpenAIModelConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) to generate questions and answers."
    ]
   },
   {
@@ -124,6 +165,13 @@
    "source": [
     "config = Config(model_config=OpenAIModelConfig())\n",
     "client = Client(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
    ]
   },
   {
@@ -141,6 +189,15 @@
    ],
    "source": [
     "output = client.run(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View the output\n",
+    "\n",
+    "Let's take a look of the generated output."
    ]
   },
   {
@@ -168,7 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot model flow graph"
+    "### Plot model flow graph\n",
+    "Here, we visualize the model flow graph for the `ModelFlow`."
    ]
   },
   {
