--- a/example/model/openai_json_model.ipynb
+++ b/example/model/openai_json_model.ipynb
@@ -4,8 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for OpenAIJsonConfig\n",
-    "## Update system path"
+    "# Notebook for OpenAIJsonModelFlow\n",
+    "\n",
+    "In this example, we will show you how to generate question-answers (QAs) from give text strings using OpenAI's models via uniflow's [OpenAIJsonModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L125).\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [OpenAI API key](https://platform.openai.com/api-keys) to run the code. Once you have the key, set it as the environment variable `OPENAI_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)\n",
+    "\n",
+    "### Update system path"
    ]
   },
   {
@@ -28,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import dependency"
+    "### Import dependency"
    ]
   },
   {
@@ -71,6 +80,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List all the available flows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -97,30 +113,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare sample prompts\n",
+    "\n",
+    "First, we need to demonstrate sample prompts for LLM, including a custom instruction and some sample prompts.\n",
+    "\n",
+    "First we giving the custom instruction `GuidedPrompt` class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['OpenAIModelServer', 'HuggingfaceModelServer', 'LMQGModelServer']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ModelServerFactory.list()"
+    "guided_prompt = GuidedPrompt(\n",
+    "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run model flow to generate data"
+    "Second, we craft some dummy sample raw text strings."
    ]
   },
   {
@@ -129,21 +147,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contexts = [\n",
+    "raw_context_input = [\n",
     "    \"It was a sunny day and the sky color is blue.\",\n",
     "    \"My name is bobby and I am a talent software engineer working on AI/ML.\",\n",
-    "]\n",
-    "\n",
-    "guided_prompt = GuidedPrompt(\n",
-    "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\"\n",
-    ")\n",
-    "\n",
-    "data = [Context(context=c) for c in contexts]"
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, for the given raw text strings `raw_context_input` above, we convert them to the `Context` class to be processed by `uniflow`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data = [\n",
+    "    Context(context=c)\n",
+    "    for c in raw_context_input\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use LLM to generate data\n",
+    "\n",
+    "In this example, we will use the [OpenAIModelConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17)'s default LLM to generate questions and answers.\n",
+    "\n",
+    "Here, we pass in our `guided_prompt` to the `OpenAIConfig` to use our customized instructions and examples, instead of the `uniflow` default ones.\n",
+    "\n",
+    "We also want to get the response in the `json` format instead of the `text` default, so we set the `response_format` to `json_object`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,40 +201,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.48it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "      'question': 'What was the color of the sky?',\n",
-       "      'answer': 'blue.'}],\n",
-       "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10a044970>},\n",
-       " {'output': [{'response': [{'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
-       "      'question': \"What is bobby's profession?\",\n",
-       "      'answer': 'software engineer.'}],\n",
-       "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10a0447f0>}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "output = client.run(data)\n",
-    "output"
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
    ]
   },
   {
@@ -199,15 +213,41 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:01<00:00,  1.09it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = client.run(input_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View the output\n",
+    "\n",
+    "Let's take a look of the generated output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What was the color of the sky?',\n",
+       "   'question': 'What is the color of the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +312,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x104167a00>"
+       "<graphviz.graphs.Digraph at 0x10813f820>"
       ]
      },
      "metadata": {},
@@ -285,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +372,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x104167970>"
+       "<graphviz.graphs.Digraph at 0x10813f370>"
       ]
      },
      "metadata": {},
