--- a/example/model/openai_model.ipynb
+++ b/example/model/openai_model.ipynb
@@ -4,8 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for FewShotModelFlow \n",
-    "## Update system path"
+    "# Notebook for OpenAIModelFlow \n",
+    "In this example, we will show you how to generate question-answers (QAs) from give text strings using OpenAI's models via uniflow's [OpenAIJsonModelFlow](https://github.com/CambioML/uniflow/blob/main/uniflow/flow/model_flow.py#L87).\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [OpenAI API key](https://platform.openai.com/api-keys) to run the code. Once you have the key, set it as the environment variable `OPENAI_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)\n",
+    "### Update system path"
    ]
   },
   {
@@ -28,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import dependency"
+    "### Import dependency"
    ]
   },
   {
@@ -69,6 +76,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List all available flows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -79,6 +93,8 @@
        "['LinearFlow',\n",
        " 'ModelFlow',\n",
        " 'JsonModelFlow',\n",
+       " 'OpenAIModelFlow',\n",
+       " 'OpenAIJsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
        " 'LMQGModelFlow']"
       ]
@@ -96,7 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run model flow to generate data"
+    "### Prepare Sample Prompts\n",
+    "Here, we will use the following sample prompts from which to generate QAs."
    ]
   },
   {
@@ -105,11 +122,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contents = [\"It was a sunny day and the sky color is blue.\", \"My name is bobby and I am a talent software engineer working on AI/ML.\"]\n",
-    "data = [\n",
-    "    Context(context=c)\n",
-    "    for c in contents\n",
-    "]"
+    "raw_context_input = [\"It was a sunny day and the sky color is blue.\", \"My name is bobby and I am a talent software engineer working on AI/ML.\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, for the given raw text strings `raw_context_input` above, we convert them to the `Context` class to be processed by `uniflow`."
    ]
   },
   {
@@ -118,25 +138,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIConfig()\n",
-    "client = Client(config)"
+    "data = [\n",
+    "    Context(context=c)\n",
+    "    for c in raw_context_input\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use LLM to generate data\n",
+    "In this example, we use the `OpenAIConfig` defaults with the [OpenAIModelConfig](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) to generate questions and answers."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.24it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output = client.run(data)"
+    "config = OpenAIConfig()\n",
+    "client = Client(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
    ]
   },
   {
@@ -145,19 +175,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'response': ['question: What is the color of the sky?\\nanswer: blue.'],\n",
-       " 'error': 'No errors.'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:03<00:00,  1.54s/it]\n"
+     ]
     }
    ],
    "source": [
-    "output[0]['output'][0]"
+    "output = client.run(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View the output\n",
+    "\n",
+    "Let's take a look of the generated output."
    ]
   },
   {
@@ -168,11 +203,32 @@
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What type of technologies do you work on?\\nanswer: AI/ML.'],\n",
+       "{'response': ['question: What was the weather like on that day?\\nanswer: sunny.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output[0]['output'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'response': [\"question: What is Bobby's occupation?\\nanswer: software engineer working on AI/ML.\"],\n",
+       " 'error': 'No errors.'}"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,33 +267,33 @@
        "<!-- Generated by graphviz version 9.0.0 (20230911.1827)\n",
        " -->\n",
        "<!-- Pages: 1 -->\n",
-       "<svg width=\"193pt\" height=\"116pt\"\n",
-       " viewBox=\"0.00 0.00 192.59 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"251pt\" height=\"116pt\"\n",
+       " viewBox=\"0.00 0.00 250.94 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 188.59,-112 188.59,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 246.94,-112 246.94,4 -4,4\"/>\n",
        "<!-- root -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>root</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"121.47\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"121.47\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_0/model_op_1 -->\n",
+       "<!-- thread_0/openai_model_op_1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_0/model_op_1</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-18\" rx=\"92.3\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/model_op_1</text>\n",
+       "<title>thread_0/openai_model_op_1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"121.47\" cy=\"-18\" rx=\"121.47\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"121.47\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/openai_model_op_1</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_0/model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/openai_model_op_1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_0/model_op_1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M92.3,-71.7C92.3,-64.41 92.3,-55.73 92.3,-47.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"95.8,-47.62 92.3,-37.62 88.8,-47.62 95.8,-47.62\"/>\n",
+       "<title>root&#45;&gt;thread_0/openai_model_op_1</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M121.47,-71.7C121.47,-64.41 121.47,-55.73 121.47,-47.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"124.97,-47.62 121.47,-37.62 117.97,-47.62 124.97,-47.62\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1059e2140>"
+       "<graphviz.graphs.Digraph at 0x111674220>"
       ]
      },
      "metadata": {},
@@ -250,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -271,33 +327,33 @@
        "<!-- Generated by graphviz version 9.0.0 (20230911.1827)\n",
        " -->\n",
        "<!-- Pages: 1 -->\n",
-       "<svg width=\"193pt\" height=\"116pt\"\n",
-       " viewBox=\"0.00 0.00 192.59 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"251pt\" height=\"116pt\"\n",
+       " viewBox=\"0.00 0.00 250.94 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 188.59,-112 188.59,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 246.94,-112 246.94,4 -4,4\"/>\n",
        "<!-- root -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>root</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"121.47\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"121.47\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- thread_0/model_op_2 -->\n",
+       "<!-- thread_0/openai_model_op_2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_0/model_op_2</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-18\" rx=\"92.3\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/model_op_2</text>\n",
+       "<title>thread_0/openai_model_op_2</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"121.47\" cy=\"-18\" rx=\"121.47\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"121.47\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/openai_model_op_2</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;thread_0/model_op_2 -->\n",
+       "<!-- root&#45;&gt;thread_0/openai_model_op_2 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_0/model_op_2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M92.3,-71.7C92.3,-64.41 92.3,-55.73 92.3,-47.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"95.8,-47.62 92.3,-37.62 88.8,-47.62 95.8,-47.62\"/>\n",
+       "<title>root&#45;&gt;thread_0/openai_model_op_2</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M121.47,-71.7C121.47,-64.41 121.47,-55.73 121.47,-47.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"124.97,-47.62 121.47,-37.62 117.97,-47.62 124.97,-47.62\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10ac7fe80>"
+       "<graphviz.graphs.Digraph at 0x110a4f970>"
       ]
      },
      "metadata": {},
